--- a/frontapp/templates/frontapp/layout.html
+++ b/frontapp/templates/frontapp/layout.html
@@ -26,7 +26,7 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-  
+    {% include 'frontapp/navbar.html' %}
     {% block body %}
 
     {% endblock %}
